# kernel_build_action

./: .coverage  .gitignore  .pylintrc  .shellcheckrc  .yamllint  2.sh  AGENTS.md  KernelSU-hook-OPLUS.patch  KernelSU-hook.patch  LICENSE  README.md  SECURITY.md  action.yml  biome.json  config.py  main.sh  package.json  post.sh  pyproject.toml
.gemini/: config.yaml  styleguide.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  common.yml  config.yml  feature_request.yml
.github/workflows/: biome.yml  build.yml  check.yml  close-pr.yml  codacy.yml  lint.yml  lkm.yml  main.yml  pylint.yml  pytest.yml  test.yml  tsbuild.yml  tslint.yml
__pytest__/: conftest.py  test_config.py
__pytest__/kernelsu/: test_apply_cocci.py
__pytest__/lxc/: test_config.py  test_patch_cocci.py
__tests__/: artifact.test.ts  builder.test.ts  cache.test.ts  clean.test.ts  error.test.ts  kernel.test.ts  packager.test.ts  patches.test.ts  post.test.ts  release.test.ts  toolchain.test.ts  utils.test.ts
apatch/: Kconfig  module_fix.patch
kernelsu/: 0001-fs-backport-path_umount-from-linux-5.9.patch  README.md  apply_cocci.py  apply_cocci.sh  check_gki.pl  classic.cocci  ksupatch.sh  minimal.cocci  patch.sh
ksupatchs/: KernelSU-hook-OPLUS.patch
lxc/: Kconfig  README.md  cgroup.cocci  config.sh  patch.sh  patch_cocci.py  patch_cocci.sh  xt_qtaguid.cocci
nethunter/: README.md  add-wifi-injection.patch  config.sh  fix-ath9k-naming-conflict.patch  patch.py
patchs/: KernelSU-4.9-faccessat-hook.patch
rekernel/: Kconfig  Makefile  README.md  patch.py  patch.sh  rekernel.c  rekernel.h
src/: artifact.ts  builder.ts  cache.ts  clean.ts  config.ts  error.ts  index.ts  kernel.ts  packager.ts  patches.ts  post.ts  release.ts  toolchain.ts  utils.ts
tests/: .gitignore  README.md  clean.pl  clean.ts  eslint.config.mjs  eslint.config.ts  index.js  index.ts  package.json
(+18 files in other folders)
