[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-build-action-tests"
version = "0.1.0"
description = "Pytest test suite for kernel_build_action Python scripts"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["__pytest__"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks tests as security-related tests",
    "network: marks tests that require network access",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = [
    "mkdtboimg.py",
    "kernelsu",
    "lxc",
    "nethunter",
    "rekernel",
]
branch = true
omit = [
    "__pytest__/*",
    "node_modules/*",
    "dist/*",
    "coverage/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
fail_under = 80
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "coverage/python"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "node_modules",
    "dist",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = [
    "pytest",
    "apply_cocci",
    "config",
    "patch",
    "patch_cocci",
]
ignore_missing_imports = true
